--- a/_talks/DPP2023.md
+++ b/_talks/DPP2023.md
@@ -8,5 +8,5 @@ date: 2023-10-30
 location: "Denver, CO"
 ---
 
-This talk discusses the challenge to the commonly held belief that kinetic energy (KE) in the presence of a shock does not undergo an inertial scale-local cascade. Presenting rigorous mathematical analysis and physical arguments, the authors Dina Soltani Tehrani and Hussein Aluie dismantle the traditional view, showing that KE can cascade through scales in a shock scenario. Examples from Burgers equation and exact 1D normal shock solutions provide evidence that scale-locality of the energy transfer is indeed possible without the need for homogeneity or isotropy. The findings could have a significant impact on our understanding of turbulence across different Mach numbers and without strict assumptions regarding the equations of state.
+It is commonly claimed that kinetic energy (KE) in the presence of a shock does not undergo an inertial scale-local cascade but that KE at a given scale must be dissipated directly into heat at the viscous (molecular) scales without passing through intermediate scales. Using rigorous mathematical analysis and physical arguments, we will explain why this widely held notion rests on flawed/unrefined intuition. We demonstrate rigorous proofs of scale-locality of the cascade due to shocks using two examples:(i) Burgers equation and (ii) exact 1D normal shock solution. Our analytical results hold in broad generality, for turbulence at any Mach number, for any equation of state, and without the requirement of homogeneity or isotropy. The assumptions we make in our proofs on the scaling of velocity, pressure, and density structure functions are weak and enjoy compelling empirical support.
 ---
